--- a/hobby.html
+++ b/hobby.html
@@ -31,29 +31,29 @@
     <li>Watching comedy movies</li> 
 </ol>
 <P style="font-size: 29px;">: This all are my free time activities</P>
-<h3>=> <b>Poem</b></h3>
-<h4>Title: <i>I have a dream</i></h4>
-<p>:I have a dream always i dream - dream - dream</p>
-<P>:To be a complet man</P>
-<p>:To surprise my parents</p>
-<p>:To surprise my teachers</p>
-<p>:To surprise my country</p>
-<p>:I want to be a guard for patients as a Doctor</p>
-<p>:I want to be an Engineer to solve the problems as a programmer</p>
-<p>:I want to be a Teacher to share a knowledge</p>
-<p>:I want to be a Pilot to fly on the earth</p>
-<p>:I have a dream always i dream</p>
-<p>:My fellow student, my teachers</p>
-<p>:My school adminstrators and my parents</p>
-<p>:Never think that ur effort is failed</p>
-<p>:I have a dream to make you happy</p>
-<p>:I lise my all pover to achieve</p>
-<p>:I dream to fill knowledge gap</p>
-<p>:I deram to fill economy gap</p>
-<p>:I dream to fill generation gap</p>
-<p>:This is my word i want to say</p>
-<p>:I have a dream again and again</p>
-<p>:I have a dream again and again</p>
+<h3 style="text-align: center;">=> <b>Poem</b></h3>
+<h4 style="text-align: center;">Title: <i>I have a dream</i></h4>
+<p style="text-align: center;">:I have a dream always i dream - dream - dream</p>
+<P style="text-align: center;">:To be a complet man</P>
+<p style="text-align: center;">:To surprise my parents</p>
+<p style="text-align: center;">:To surprise my teachers</p>
+<p style="text-align: center;">:To surprise my country</p>
+<p style="text-align: center;">:I want to be a guard for patients as a Doctor</p>
+<p style="text-align: center;">:I want to be an Engineer to solve the problems as a programmer</p>
+<p style="text-align: center;">:I want to be a Teacher to share a knowledge</p>
+<p style="text-align: center;">:I want to be a Pilot to fly on the earth</p>
+<p style="text-align: center;">:I have a dream always i dream</p>
+<p style="text-align: center;">:My fellow student, my teachers</p>
+<p style="text-align: center;">:My school adminstrators and my parents</p>
+<p style="text-align: center;">:Never think that ur effort is failed</p>
+<p style="text-align: center;">:I have a dream to make you happy</p>
+<p style="text-align: center;">:I lise my all pover to achieve</p>
+<p style="text-align: center;">:I dream to fill knowledge gap</p>
+<p style="text-align: center;">:I deram to fill economy gap</p>
+<p style="text-align: center;">:I dream to fill generation gap</p>
+<p style="text-align: center;">:This is my word i want to say</p>
+<p style="text-align: center;">:I have a dream again and again</p>
+<p style="text-align: center;">:I have a dream again and again</p>
 </body>
 <footer>
     <p>CopyRight Reserved &copy;2024
